<resources>
    <string name="app_name">SocialNetwork</string>
    <string name="home">Home</string>
    <string name="profile">Trang cá nhân</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Tên tài khoản</string>
    <string name="name">Tên</string>
    <string name="avatar">avatar</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="tablayout">Tablayout</string>
    <string name="more_button">more button</string>
    <string name="test_count">1</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="bio">Tiểu sử</string>
    <string name="edit_avatar_picture">Chỉnh sửa ảnh đại diện</string>
    <string name="edit_profile_title">Sửa thông tin cá nhân</string>
    <string name="days">&#160;ngày</string>
    <string name="hours">&#160;giờ</string>
    <string name="minutes">&#160;phút</string>
    <string name="seconds">&#160;giây</string>
    <string name="follow">Theo dõi</string>
    <string name="unfollow">Bỏ theo dõi</string>
    <string name="followers">Người theo dõi</string>
    <string name="following">Đang theo dõi</string>
    <string name="comment">Bình luận</string>
    <string name="hint_reply_to_post">Trả lời bài viết</string>
    <string name="reply_to_person">Trả lời @%s</string>
    <string name="hint_reply_to_person">Trả lời bình luận</string>
    <string name="todo">TODO</string>
    <string name="view_n_replies">Xem %s trả lời</string>
    <string name="cancel">Hủy</string>
    <string name="posts">Bài viết</string>
    <string name="likes">Thích</string>
    <string name="reposts">Đăng lại</string>
    <string name="logout">Đăng xuất</string>
    <string name="a">@</string>
    <string name="empty">Không được bỏ trống</string>
    <string name="confirm_password">Mật khẩu không khớp</string>
    <string name="register_fail">Đăng ký thất bại</string>
</resources>