<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <FrameLayout
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/constraintLayout"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:padding="5dp">

        <EditText
            android:id="@+id/reply_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_wrap_reply_to"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:layout_marginTop="3dp"
            android:background="@drawable/textbox_reply"
            android:hint="@string/hint_reply_to_post"
            android:inputType="textMultiLine"
            android:paddingStart="15sp"
            android:paddingTop="8dp"
            android:paddingEnd="15sp"
            android:paddingBottom="8dp"
            android:textSize="15sp" />


        <LinearLayout
            android:id="@+id/layout_wrap_reply_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="12sp"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detail_reply_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reply_to_person"
                android:textSize="12sp"/>

            <View
                android:layout_width="2dp"
                android:layout_height="2dp"
                android:layout_marginStart="7dp"
                android:background="@drawable/dot"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="12sp"
                android:layout_marginStart="7dp"
                android:textStyle="bold"
                android:textColor="#707071"/>

        </LinearLayout>




    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/send_reply"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/un_active"
        app:cardCornerRadius="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/fb_ic_send_outline_24"
            app:tint="@color/white" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>