<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_reply"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- res/layout/item_post.xml -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/post"
        tools:ignore="MissingConstraints">

        <!-- Thông tin người đăng -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="false">

<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content">-->

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="18dp"
                        android:contentDescription="@string/avatar"
                        android:scaleType="centerCrop"
                        android:src="@drawable/avt"
                        tools:ignore="MissingConstraints" />

<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/username"
                        android:textColor="#808080"
                        android:textSize="12sp"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>


                <TextView
                    android:id="@+id/createTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--:--"
                    android:textColor="#808080"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText,TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="end|top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/followButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/follow"
                    android:textColor="@color/blue"
                    android:visibility="gone"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/postMoreButton"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/more_button"
                    android:scaleType="centerCrop"
                    android:src="@drawable/instagram_more_horizontal_pano_outline_12"
                    tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_marginLeft="50dp"
            android:id="@+id/postContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="Bai dang o trang chinh"
            android:textColor="#000000"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_marginLeft="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/likeButton"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="Like"
                android:src="@drawable/barcelona_heart_outline_18"

                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/likeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="30dp"
                android:text="@string/test_count"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/reply_button"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="Reply"
                android:src="@drawable/barcelona_comment_outline_18"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/repliedCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="30dp"
                android:text="@string/test_count"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/repostButton"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="Repost"
                android:src="@drawable/barcelona_repost_outline_18"
                tools:ignore="HardcodedText" />

            <TextView
                android:visibility="gone"
                android:id="@+id/repostCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="10dp"
                android:text="@string/test_count"
                android:textColor="@color/black"
                android:textSize="13sp" />


        </LinearLayout>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/replies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:layout_marginLeft="58dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:id="@+id/load_replies_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:layout_marginBottom="8dp"
        android:text="@string/view_n_replies"
        android:paddingStart="58dp"
        tools:ignore="RtlSymmetry" />

</LinearLayout>